# servant.linux

./: AUTHORS  ChangeLog  Makefile.am  Makefile.in  README  configure  configure.in  servant.1  servant.c  servant.lsm.in  servant.spec.in  system.h  xmalloc.c
autom4te.cache/: output.0  requests  traces.0  traces.1
