bin_PROGRAMS=servant
servant_SOURCES=servant.c servant.1 xmalloc.c system.h aclocal.m4 getopt.c getopt1.c getopt.h

#  uncomment the following if servant requires the math library
#servant_LDADD=-lm

EXTRA_DIST=servant.lsm.in servant.spec.in servant.texinfo

#  if you write a self-test script named `chk', uncomment the
#  following and add `chk' to the EXTRA_DIST list
#TESTS=chk


#  install the man pages
man_MANS=servant.1
